tests/toy/neg/001685_mutation.toylang
program a = { while int a do sleep; } .
